Fix a UI bug that if user email is too long, the UI can't recognize email addr

--- a/http_handler/static/css/youps/style.css
+++ b/http_handler/static/css/youps/style.css
@@ -633,3 +633,7 @@ div[type='repeat'] {
     margin: -8px 5px 0 0;
   }
 }
+
+.tab-title span {
+  display: none;
+}
